@@ -1,3 +1,13 @@
+2001-10-13  Andrew Cagney  <ac131313@redhat.com>
+
+	* config/s390/s390x.mt (GDB_MULTI_ARCH): Change to
+	GDB_MULTI_ARCH_PARTIAL.
+	* config/s390/s390.mt (GDB_MULTI_ARCH): Ditto.
+
+	* config/s390/tm-linux.h (SKIP_TRAMPOLINE_CODE): Undefine
+	definition from config/tm-linux.h.  Allow gdbarch to override it.
+	* config/tm-sysv4.h: Revert.  Handled by tm-linux.h.
+	
 2001-09-26  Andrew Cagney  <ac131313@redhat.com>
 
 	From 2001-07-09 D.J. Barrow <djbarrow@de.ibm.com>:
